public static class Define
{
    //PlayerPrefs
    public static readonly string LoginTypeKey = "loginKey";
    public static readonly string SocialTypeKey = "socialKey";
    public static readonly string CurrentDunjeonKey = "currentdunjeonKey";
    public static readonly string StoryDunjeonKey = "storydunjeonKey";
    public static readonly string OpenSkillListKey = "openskilllistKey";
    public static readonly string OpenSkillSlotCountKey = "openskillslotcountKey";
    public static readonly string EquipSkillKey = "equipskillKey";

    //TheBackEndChartKey
    public static readonly string SkillItemChartKey = "skillchart";
    public static readonly string MonsterChartKey = "monsterchart";
    public static readonly string DunjeonChartKey = "dunjeonchart";
    public static readonly string LevelchartKey = "levelchart";
    public static readonly string StatUpGradeChartKey = "upgradestatchart";
    public static readonly string EquipmentChartKey = "equipmentchart";
    public static readonly string GachaChartKey = "gachachart";

    //TheBackEndProbabilityChartKey
    public static readonly string WeaponGachaKey = "weapongacha";
    public static readonly string NecklaceGachaKey = "necklacegacha";
    public static readonly string RingGachaKey = "ringgacha";
    public static readonly string SkillGachaKey = "skillgacha";

    //CharacterInfoTableKey
    public static readonly string CharacterInfoTable = "charinfo";
    public static readonly string CharacterUpGradeStatTable = "charupgradestat";
    public static readonly string CharacterEquipmentInfoTable = "charequipmentinfo";
    public static readonly string CharacterSkillInfoTable = "charskillinfo";

    //CharacterInfoKey
    public static readonly string PlayerLevel = "level";
    public static readonly string PlayerExp = "exp";

    public static readonly string PlayerGold = "gold";
    public static readonly string PlayerDia = "dia";

    public static readonly string PlayerEquipmentSton = "equipmentston";
    public static readonly string PlayerSkillSton = "skillston";

    public static readonly string PlayerEquipID = "playerequipid";


    //CharacterInfoKey-UpGrade
    public static readonly string PlayerUpGradeAddDamage = "playerupgradeadddamage";
    public static readonly string PlayerUpGradeCriticalDamage = "playerupgradecriticaldamage";
    public static readonly string PlayerUpGradeCriticalPer = "playerupgradecriticalper";
    public static readonly string PlayerUpGradeAddGold = "playerupgradeaddgold";
    public static readonly string PlayerUpGradeMP = "playerupgrademp";
    public static readonly string PlayerUpGradeMPRecovery = "playerupgrademprecovery";
    public static readonly string PlayerUpGradeAttackSpeed = "playerupgradeattackspeed";
    public static readonly string PlayerUpGradeMoveSpeed = "playerupgrademovespeed";

    public static readonly string PlayerDayQuestStep = "dayqueststep";
    public static readonly string PlayerDunJeonStep = "dunjeonstep";

    //AnimationTrigger
    public static readonly string AniTrigger_Idle = "Idle";
    public static readonly string AniTrigger_Run = "Run";
    public static readonly string AniTrigger_Attack = "Attack";
    public static readonly string AniTrigger_Hit = "Hit";
    public static readonly string AniTrigger_Dead = "Dead";

    //Equipment
    public static readonly byte EquipmentComposeAmount = 5;
    public static readonly int EquipmentQualityOperationValue = 2;

    //CharacterSkillInfoKey
    public static readonly string PlayerSkillInfo = "skillinfo";
    public static readonly string PlayerSkillSlotInfo = "skillslotinfo";
    public static readonly string PlayerSkillSlotPage = "skillslotpage";

    //CharacterDefaultSetting
    public static readonly int PlayerDefaultSlotTotalCount = 10;
    public static readonly int PlayerDefaultSlotCount = 1;

    public static readonly double PlayerDefaultGold = 1000.0;
    public static readonly double PlayerDefaultDia = 10.0;
    public static readonly double PlayerDefaultEquipmentSton = 1000.0;
    public static readonly double PlayerDefaultSkillSton = 1000.0;

    public static readonly double PlayerDefaultDamage = 1.0;
    public static readonly double PlayerDefaultDamagePer = 1.0;

    public static readonly double PlayerDefaultCriticalDamage = 1.0;
    public static readonly double PlayerDefaultCriticalPer = 0.0;

    public static readonly double PlayerDefaultEndDamagePer = 1.0;
    public static readonly double PlayerDefaultSkillDamagePer = 1.0;

    public static readonly double PlayerDefaultHP = 100.0;
    public static readonly double PlayerDefaultHPPer = 1.0;
    public static readonly double PlayerDefaultHPRecovery = 1.0f;

    public static readonly double PlayerDefaultMP = 100.0;
    public static readonly double PlayerDefaultMPPer = 1.0;
    public static readonly double PlayerDefaultMPRecovery = 10.0f;

    public static readonly double PlayerDefaultMoveSpeed = 2.0;
    public static readonly double PlayerDefaultAttackSpeed = 10.0f;

    public static readonly double PlayerDefaultAddGoldPer = 1.0;
    public static readonly double PlayerDefaultAddExpPer = 1.0f;

    public static readonly double PlayerDefaultCoolTimeRatio = 1.0f;
}